--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -50,48 +50,76 @@
     <!-- Блок формы -->
     <div id="step1-form"
          class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style hidden gap-3 transition-transform">
+        <div id="server-error" class="hidden common_error"
+             role="alert">
+            <svg class="shrink-0 inline w-6 h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                 fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <span class="!font-bold">Danger alert!</span>
+                <p>Change a few things up and try submitting again.</p>
+            </div>
+        </div>
         <h2 class="text-xl text-text dark:text-text-dark font-semibold">Загрузка файлов</h2>
         <p class="text-md text-text dark:text-text-dark font-medium">Сначало нужно выбрать файлы, которые необходимо
             обработать. </p>
+        <div id="upload-spinner" class="hidden flex items-center justify-center mt-4">
+            <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
+            <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
+        </div>
         <!-- Форма загрузки файлов сюда -->
-        <form action="{% url 'file_creator:file-creator-start' %}" method="post" enctype="multipart/form-data"
-              class="flex flex-col gap-5 ">
+        <form action="{% url 'file_creator:file-creator-start' %}"
+              method="post"
+              enctype="multipart/form-data"
+              novalidate
+              id="file-upload-form"
+              class="flex flex-col gap-2 ">
             {% csrf_token %}
             <!-- Загрузка файлов -->
             <div>
-                <label for="files" class="correct_label text-md mb-3 block">Выберите
+                <label id="files-label" for="files" class="correct_label text-md mb-3 block">Выберите
                     документы
                     (.doc, .docx, .rtf)</label>
-                <input type="file" name="files" id="files" accept=".doc,.docx,.rtf" multiple required
+                <input type="file" name="files" id="files" accept=".doc,.docx,.rtf" multiple
                        class="correct_input">
+                <!-- Контейнер для отображения выбранных файлов -->
+                <ul id="file-list" class="mt-2 text-sm text-text dark:text-text-dark list-disc list-inside"></ul>
+
             </div>
+            <p id="files-error" class="hidden error_message">Пожалуйста, выберите хотя бы один
+                файл или файлы с верным расширением</p>
 
             <!-- Начальный номер -->
             <div>
 
-                <label for="start_number" class="correct_label">Начальный
+                <label id="start-number-label" for="start-number" class="correct_label">Начальный
                     номер</label>
-                <input type="number" name="start_number" id="start_number" required
+                <input type="number" name="start_number" id="start-number" min="1"
                        class="correct_input">
             </div>
+            <p id="start-number-error" class="hidden error_message">Введите число больше
+                нуля.</p>
 
             <!-- Тип оборудования -->
             <div>
-                <label for="device_type" class="correct_label">
+                <label id="device-type-label" for="device-type" class="correct_label">
                     Вид оборудования
                 </label>
-                <select name="device_type" id="device_type" required
+                <select name="device-type" id="device-type"
                         class="correct_input">
                     <option value="" disabled selected>Выберите тип оборудования</option>
                     <option value="space">Космос</option>
                     <option value="globus">Глобус</option>
                 </select>
             </div>
-
+            <p id="device-type-error" class="hidden error_message">Выберите тип
+                оборудования.</p>
             <!-- Чекбокс "одинаковые номера" -->
             <div class="flex justify-start items-center gap-5">
                 <input id="same_number" name="same_number" type="checkbox"
-                       class="correct_icon rounded-full text-xl">
+                       class="correct_icon rounded-full text-xl" checked>
                 <label for="same_number" class="correct_label text-md">Основной и
                     подписной номер одинаковы</label>
             </div>
@@ -115,8 +143,8 @@
 {% endblock %}
 {% block extra_js %}
     {% if VITE_DEV_MODE %}
-        <script type="module" src="http://localhost:5173/src/file_creator/js/upload.js"></script>
+        <script type="module" src="http://localhost:5173/src/file_creator/js/main.js"></script>
     {% else %}
-        <script type="module" crossorigin src="{% static 'file_creator/js/upload.js' %}"></script>
+        <script type="module" crossorigin src="{% static 'file_creator/js/main.js' %}"></script>
     {% endif %}
 {% endblock %}
