--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -15,29 +15,29 @@
                 <p class="text-sm">Добавление файлов на обработку</p>
             </div>
         </li>
-        <li class="step flex items-center text-gray-500 dark:text-gray-400 space-x-2.5 cursor-pointer" data-step="2">
-            <span class="step-circle flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">2</span>
+        <li class="step li-style pointer-events-none" data-step="2">
+            <span>2</span>
             <div>
                 <h3 class="font-medium leading-tight">Подготовка</h3>
                 <p class="text-sm">Добавление нужных реквизитов к документам</p>
             </div>
         </li>
-        <li class="step flex items-center text-blue-600 dark:text-blue-500 space-x-2.5 cursor-pointer" data-step="3">
-            <span class="step-circle flex items-center justify-center w-8 h-8 border border-blue-600 rounded-full shrink-0 dark:border-blue-500">3</span>
+        <li class="step li-style pointer-events-none" data-step="3">
+            <span>3</span>
             <div>
                 <h3 class="font-medium leading-tight">Ответ от сервера</h3>
                 <p class="text-sm">Проверка полученных документов от сервера</p>
             </div>
         </li>
-        <li class="step flex items-center text-gray-500 dark:text-gray-400 space-x-2.5 cursor-pointer" data-step="4">
-            <span class="step-circle flex items-center justify-center w-8 h-8 border border-gray-500 rounded-full shrink-0 dark:border-gray-400">4</span>
+        <li class="step li-style pointer-events-none" data-step="4">
+            <span>4</span>
             <div>
                 <h3 class="font-medium leading-tight">Сохранение документов</h3>
                 <p class="text-sm">Сохранение документов</p>
             </div>
         </li>
-        <li class="step flex items-center text-blue-600 dark:text-blue-500 space-x-2.5 cursor-pointer" data-step="5">
-            <span class="step-circle flex items-center justify-center w-8 h-8 border border-blue-600 rounded-full shrink-0 dark:border-blue-500">5</span>
+        <li class="step li-style pointer-events-none" data-step="5">
+            <span>5</span>
             <div>
                 <h3 class="font-medium leading-tight">Ожидание ответа от сервера</h3>
                 <p class="text-sm">Обработка сообщения от сервера</p>
@@ -85,7 +85,7 @@
                 <input type="file" name="files" id="files" accept=".doc,.docx,.rtf" multiple
                        class="correct_input">
                 <!-- Контейнер для отображения выбранных файлов -->
-                <ul id="file-list" class="mt-2 text-sm text-text dark:text-text-dark list-disc list-inside"></ul>
+                <ul id="file-list" class="mt-2 text-sm text-text dark:text-text-dark list-disc"></ul>
 
             </div>
             <p id="files-error" class="hidden error_message">Пожалуйста, выберите хотя бы один
@@ -133,6 +133,31 @@
             </div>
         </form>
     </div>
+
+    <div id="step2-form"
+         class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style hidden gap-3 transition-transform">
+        <h2 class="text-xl text-text dark:text-text-dark font-semibold">Я проверил содерижмое ответа от сервера.</h2>
+        <p class="text-md text-text dark:text-text-dark font-medium">
+            Представляешь я тут понял, что внутри находятся какие-то файлы с их содержимым.
+        </p>
+        <div id="upload-spinner2" class="hidden flex items-center justify-center mt-4">
+            <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
+            <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
+        </div>
+    </div>
+
+    <div id="step3-form"
+         class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style hidden gap-3 transition-transform">
+        <h2 class="text-xl text-text dark:text-text-dark font-semibold">Я проверил содерижмое ответа от сервера.</h2>
+        <p class="text-md text-text dark:text-text-dark font-medium">
+            Представляешь я тут понял, что внутри находятся какие-то файлы с их содержимым.
+        </p>
+        <div id="upload-spinner3" class="hidden flex items-center justify-center mt-4">
+            <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
+            <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
+        </div>
+    </div>
+
 
 
 
