--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -15,28 +15,28 @@
                 <p class="text-sm">Добавление файлов на обработку</p>
             </div>
         </li>
-        <li class="step li-style pointer-events-none" data-step="2">
+        <li class="step li-style" data-step="2">
             <span>2</span>
             <div>
                 <h3 class="font-medium leading-tight">Подготовка</h3>
                 <p class="text-sm">Добавление нужных реквизитов к документам</p>
             </div>
         </li>
-        <li class="step li-style pointer-events-none" data-step="3">
+        <li class="step li-style" data-step="3">
             <span>3</span>
             <div>
                 <h3 class="font-medium leading-tight">Ответ от сервера</h3>
                 <p class="text-sm">Проверка полученных документов от сервера</p>
             </div>
         </li>
-        <li class="step li-style pointer-events-none" data-step="4">
+        <li class="step li-style " data-step="4">
             <span>4</span>
             <div>
                 <h3 class="font-medium leading-tight">Сохранение документов</h3>
                 <p class="text-sm">Сохранение документов</p>
             </div>
         </li>
-        <li class="step li-style pointer-events-none" data-step="5">
+        <li class="step li-style " data-step="5">
             <span>5</span>
             <div>
                 <h3 class="font-medium leading-tight">Ожидание ответа от сервера</h3>
@@ -148,7 +148,7 @@
 
     <div id="step3-form"
          class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style hidden gap-3 transition-transform">
-        <h2 class="text-xl text-text dark:text-text-dark font-semibold">Я проверил содерижмое ответа от сервера.</h2>
+        <h2 class="text-xl text-text dark:text-text-dark font-semibold">Я проверил содерижмое ответа от сервера3.</h2>
         <p class="text-md text-text dark:text-text-dark font-medium">
             Представляешь я тут понял, что внутри находятся какие-то файлы с их содержимым.
         </p>
