--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -18,15 +18,15 @@
         <li class="step li-style" data-step="2">
             <span>2</span>
             <div>
-                <h3 class="font-medium leading-tight">Подготовка</h3>
-                <p class="text-sm">Добавление нужных реквизитов к документам</p>
+                <h3 class="font-medium leading-tight">Подготовка ответ</h3>
+                <p class="text-sm">Анализ ответа от сервера</p>
             </div>
         </li>
         <li class="step li-style" data-step="3">
             <span>3</span>
             <div>
-                <h3 class="font-medium leading-tight">Ответ от сервера</h3>
-                <p class="text-sm">Проверка полученных документов от сервера</p>
+                <h3 class="font-medium leading-tight">Обработанные файлы</h3>
+                <p class="text-sm">Проверка полученных документов от сервера.</p>
             </div>
         </li>
         <li class="step li-style " data-step="4">
@@ -36,14 +36,6 @@
                 <p class="text-sm">Сохранение документов</p>
             </div>
         </li>
-        <li class="step li-style " data-step="5">
-            <span>5</span>
-            <div>
-                <h3 class="font-medium leading-tight">Ожидание ответа от сервера</h3>
-                <p class="text-sm">Обработка сообщения от сервера</p>
-            </div>
-        </li>
-
     </ol>
 
 
@@ -136,10 +128,6 @@
 
     <div id="step2-form"
          class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style hidden gap-3 transition-transform">
-        <h2 class="text-xl text-text dark:text-text-dark font-semibold">Я проверил содерижмое ответа от сервера.</h2>
-        <p class="text-md text-text dark:text-text-dark font-medium">
-            Представляешь я тут понял, что внутри находятся какие-то файлы с их содержимым.
-        </p>
         <div id="upload-spinner2" class="hidden flex items-center justify-center mt-4">
             <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
             <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
@@ -148,10 +136,31 @@
 
     <div id="step3-form"
          class="!max-w-6xl mx-auto form-style hidden gap-3 transition-transform">
+        <div id="server-error2" class="hidden common_error"
+             role="alert">
+            <svg class="shrink-0 inline w-6 h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                 fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <span class="!font-bold">Danger alert!</span>
+                <p>Change a few things up and try submitting again.</p>
+            </div>
+        </div>
         <h2 class="text-xl text-text dark:text-text-dark font-semibold">Проверка и редактирование содержимого</h2>
         <p class="text-md text-text dark:text-text-dark font-medium">
             Выберите файл из списка слева и отредактируйте его содержимое.
         </p>
+        <button id="save-content"
+                class="btn-submit !w-4/12 disabled:opacity-50"
+                disabled>
+            Сохранить все изменения разом.
+        </button>
+        <div id="upload-spinner3" class="hidden flex items-center justify-center mt-4">
+            <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
+            <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
+        </div>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-4">
 
@@ -166,12 +175,12 @@
                         {#                        <button class=" opacity-0 btn-cancel !w-3/10 flex group-hover:opacity-100 justify-center items-center gap-1 !py-1"#}
                         {#                                title="удалить">#}
                         {##}
-{#                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"#}
-{#                                                         stroke="currentColor" class="size-4">#}
-{#                                                        <path stroke-linecap="round" stroke-linejoin="round"#}
-{#                                                              d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"></path>#}
-{#                                                    </svg>#}
-{#                                                    <span>Удалить</span>#}
+                        {#                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"#}
+                        {#                                                         stroke="currentColor" class="size-4">#}
+                        {#                                                        <path stroke-linecap="round" stroke-linejoin="round"#}
+                        {#                                                              d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"></path>#}
+                        {#                                                    </svg>#}
+                        {#                                                    <span>Удалить</span>#}
                         {##}
                         {##}
                         {#                        </button>#}
@@ -182,7 +191,7 @@
                     </ul>
                 </div>
 
-            </div >
+            </div>
             <!-- Правая колонка: редактор содержимого -->
             <div class="col-span-2 ">
                 <div id="right-col"
@@ -194,7 +203,7 @@
                               placeholder="Содержимое документа..."
                               disabled></textarea>
                     <button id="save-edited-content"
-                            class="mt-4 self-end bg-primary dark:bg-primary-dark text-white py-2 px-4 rounded-lg hover:bg-accent transition disabled:opacity-50"
+                            class="btn-submit self-end !w-4/12 text-sm mt-3 disabled:opacity-50"
                             disabled>
                         Сохранить изменения
                     </button>
@@ -203,13 +212,13 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
+    <div id="step4-form"
+         class="relative flex-col overflow-hidden justify-center !max-w-2xl  mx-auto form-style hidden gap-3 transition-transform">
+        <div id="upload-spinner4" class="hidden flex items-center justify-center mt-4">
+            <div class="w-10 h-10 border-4 border-primary dark:border-primary-dark border-t-transparent  dark:border-t-transparent rounded-full animate-spin"></div>
+            <span class="ml-2 text-md text-text dark:text-text-dark">Загрузка файлов...</span>
+        </div>
+    </div>
 
 {% endblock %}
 {% block extra_js %}
