--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -54,6 +54,22 @@
                 <p>Change a few things up and try submitting again.</p>
             </div>
         </div>
+        <div id="server-info" class="hidden common_info"
+             role="info">
+            <svg class="shrink-0 inline w-6 h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                 fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <span class="!font-bold">Info alert!</span>
+                <h3>Сообщение</h3>
+                <p>Change a few things up and try submitting again.</p>
+                <div id="btn-div" class="flex justify-center gap-3 mt-3">
+
+                </div>
+            </div>
+        </div>
         <h2 class="text-xl text-text dark:text-text-dark font-semibold">Загрузка файлов</h2>
         <p class="text-md text-text dark:text-text-dark font-medium">Сначало нужно выбрать файлы, которые необходимо
             обработать. </p>
@@ -148,6 +164,22 @@
                 <p>Change a few things up and try submitting again.</p>
             </div>
         </div>
+        <div id="server-info2" class="hidden common_info max-w-md justify-center mx-auto"
+             role="alert">
+            <svg class="shrink-0 inline w-6 h-6 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                 fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"></path>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <span class="!font-bold">Info alert!</span>
+                <h3>Сообщение</h3>
+                <p>Change a few things up and try submitting again.</p>
+                <div id="btn-div2" class="flex justify-center gap-3 mt-3">
+
+                </div>
+            </div>
+        </div>
         <h2 class="text-xl text-text dark:text-text-dark font-semibold">Проверка и редактирование содержимого</h2>
         <p class="text-md text-text dark:text-text-dark font-medium">
             Выберите файл из списка слева и отредактируйте его содержимое.
@@ -205,7 +237,7 @@
                     <button id="save-edited-content"
                             class="btn-submit self-end !w-4/12 text-sm mt-3 disabled:opacity-50"
                             disabled>
-                        Сохранить изменения
+                        Сохранить все изменения
                     </button>
                 </div>
             </div>
