начал работу над поисковиком

--- a/lazy_ilya/file_creator/templates/file_creator/base.html
+++ b/lazy_ilya/file_creator/templates/file_creator/base.html
@@ -39,7 +39,7 @@
 
             <!-- Меню (десктоп) -->
             <div class="hidden lg:flex items-center gap-2">
-                <a href="{% url 'file_creator:file-creator-start' %}"
+                <a id="a-main" href="{% url 'file_creator:file-creator-start' %}"
                 class="a-style">Главная</a>
                 <a href="#"
                 class="a-style">Города</a>
