--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -6,7 +6,9 @@
 {% endblock %}
 
 {% block body %}
-
+    <div class="container border-4 bg-orange-600">
+    "aasda
+    </div>
 {% endblock %}
 {% block extra_js %}
     {% if VITE_DEV_MODE %}
