--- a/lazy_ilya/myauth/templates/myauth/reset_password.html
+++ b/lazy_ilya/myauth/templates/myauth/reset_password.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    <main class="flex justify-center items-center min-h-screen py-6">
+    <main class="container mx-auto flex justify-center items-center min-h-screen min-w-sm py-6">
         <form method="POST" id="reset-password-form" action="{% url 'myauth:reset-password' %}"
               class="relative form-style opacity-0 animate-fade-in">
             {% csrf_token %}
@@ -73,7 +73,7 @@
 
                             <!-- Tooltip -->
                             <div
-                                    class="absolute right-0 bottom-full mb-1 w-sm whitespace-normal p-2 text-justify text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-300 z-10">
+                                    class="absolute right-0 bottom-full mb-1 w-xs md:w-sm whitespace-normal p-2 text-justify text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto transition-opacity duration-300 z-10">
                                 <span>Номер телефона, который указывали при регистрации. Сработает только если корректно указано сочетание логина и номера телефона</span>
 
                             </div>
